--- a/Project/Assignment1/classification.ipynb
+++ b/Project/Assignment1/classification.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "4            não nos fazem rir à custa dos poderosos  Value  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "4  https://www.publico.pt/2014/10/23/desporto/opi...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -433,18 +433,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\fmna\\anaconda3\\lib\\site-packages\\xgboost\\compat.py:36: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
-      "  from pandas import MultiIndex, Int64Index\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Metrics\n",
     "import sklearn.metrics as metrics\n",
@@ -476,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1011,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Parameter tuning"
+    "### Parameter tuning\n",
+    "\n",
+    "To further better the training of the model we explored different parameters within each classifier."
    ]
   },
   {
@@ -1153,9 +1146,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      annotator    0    1    2    3    4    5    6    7    8  ...  19252  \\\n",
+      "0             A  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...    0.0   \n",
+      "1             A  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...    0.0   \n",
+      "2             A  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...    0.0   \n",
+      "3             A  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...    0.0   \n",
+      "4             A  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...    0.0   \n",
+      "...         ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...    ...   \n",
+      "16738         D  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...    0.0   \n",
+      "16739         D  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...    0.0   \n",
+      "16740         D  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...    0.0   \n",
+      "16741         D  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...    0.0   \n",
+      "16742         D  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...    0.0   \n",
+      "\n",
+      "       19253  19254  19255  19256  19257  19258  19259  19260  19261  \n",
+      "0        0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0  \n",
+      "1        0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0  \n",
+      "2        0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0  \n",
+      "3        0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0  \n",
+      "4        0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0  \n",
+      "...      ...    ...    ...    ...    ...    ...    ...    ...    ...  \n",
+      "16738    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0  \n",
+      "16739    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0  \n",
+      "16740    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0  \n",
+      "16741    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0  \n",
+      "16742    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0  \n",
+      "\n",
+      "[16743 rows x 19263 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "X_annotated = pd.concat([train['annotator'], pd.DataFrame(X)], axis=1)\n",
     "\n",
@@ -1164,9 +1191,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3335, 19262)\n",
+      "(3335,)\n"
+     ]
+    }
+   ],
    "source": [
     "X_A = X_annotated[X_annotated['annotator'] == 'A']\n",
     "X_A = X_A.drop('annotator', 1)\n",
@@ -1190,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1212,23 +1248,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\mlxtend\\classifier\\ensemble_vote.py:166: UserWarning: fit_base_estimators=False enforces use_clones to be `False`\n",
+      "  warnings.warn(\"fit_base_estimators=False \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2674     Value(-)\n",
+      "7609     Value(-)\n",
+      "10747    Value(-)\n",
+      "12931        Fact\n",
+      "4107     Value(+)\n",
+      "           ...   \n",
+      "8773        Value\n",
+      "13538    Value(-)\n",
+      "1782        Value\n",
+      "9772        Value\n",
+      "11212       Value\n",
+      "Name: label, Length: 3349, dtype: object\n",
+      "Classification report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "        Fact       0.80      0.21      0.34      3663\n",
+      "      Policy       0.87      0.04      0.08       667\n",
+      "       Value       0.52      0.99      0.68      8102\n",
+      "    Value(+)       0.93      0.04      0.07      1411\n",
+      "    Value(-)       0.89      0.13      0.22      2900\n",
+      "\n",
+      "    accuracy                           0.55     16743\n",
+      "   macro avg       0.80      0.28      0.28     16743\n",
+      "weighted avg       0.69      0.55      0.45     16743\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from mlxtend.classifier import EnsembleVoteClassifier\n",
     "import copy\n",
     "\n",
-    "clf_A = SGDClassifier(random_state=0, n_jobs=-1)\n",
+    "clf_A = SGDClassifier(random_state=0, n_jobs=-1, loss=\"log\")\n",
     "clf_A.fit(X_A_tr, y_A_tr)\n",
     "\n",
-    "clf_B = SGDClassifier(random_state=0, n_jobs=-1)\n",
+    "clf_B = SGDClassifier(random_state=0, n_jobs=-1, loss=\"log\")\n",
     "clf_B.fit(X_B_tr, y_B_tr)\n",
     "\n",
-    "clf_C = SGDClassifier(random_state=0, n_jobs=-1)\n",
+    "clf_C = SGDClassifier(random_state=0, n_jobs=-1, loss=\"log\")\n",
     "clf_C.fit(X_C_tr, y_C_tr)\n",
     "\n",
-    "clf_D = SGDClassifier(random_state=0, n_jobs=-1)\n",
+    "clf_D = SGDClassifier(random_state=0, n_jobs=-1, loss=\"log\")\n",
     "clf_D.fit(X_D_tr, y_D_tr)\n",
     "\n",
     "clf_list = [clf_A, clf_B, clf_C, clf_D]\n",
@@ -1246,14 +1322,54 @@
    "source": [
     "## Removing minorities\n",
     "\n",
-    "To limit the amount of data we will work with, we will group data by tokens and labels, and count the max number of annotators per token-label pair. Next, we will remove the entries of the annotators that will be in a minority."
+    "Next, we will remove the entries of the annotators that will be in a minority, refering to the classification of a label. Our idea was that if a majority of the annotators agrees \n",
+    "this will limit the amount of data we will work with, by grouping data by tokens and labels, and count the max number of annotators per token-label pair. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                  tokens  label\n",
+      "0      \"porque é mais prático e, o que é pior, para t...   Fact\n",
+      "1      \"revolução\" é um termo frequente na literatura...   Fact\n",
+      "2      (In)felizmente, essas relações acabam, mais ce...   Fact\n",
+      "3                    (em 2017 foram quatro vezes maiores   Fact\n",
+      "4      (pelo que julgo poder deduzir) não está obriga...   Fact\n",
+      "...                                                  ...    ...\n",
+      "12003  “tratando-se de pares cujos elementos pertence...   Fact\n",
+      "12004  “um instituto universitário especializado com ...   Fact\n",
+      "12005  “um militar na polícia, nem consegue ser bom p...  Value\n",
+      "12006                           “Água pura, cristalina.”   Fact\n",
+      "12007      “área verde de enquadramento de espaço canal”  Value\n",
+      "\n",
+      "[12008 rows x 2 columns]\n",
+      "(9606, 8054) (9606,)\n",
+      "(2402, 8054) (2402,)\n",
+      "\n",
+      "Label distribution in the training set:\n",
+      "Value       4537\n",
+      "Fact        2549\n",
+      "Value(-)    1412\n",
+      "Value(+)     678\n",
+      "Policy       430\n",
+      "Name: label, dtype: int64\n",
+      "\n",
+      "Label distribution in the test set:\n",
+      "Value       1135\n",
+      "Fact         637\n",
+      "Value(-)     353\n",
+      "Value(+)     170\n",
+      "Policy       107\n",
+      "Name: label, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "df_tmp = train.groupby(['tokens', 'label']).agg({\n",
     "    'annotator': 'count'\n",
@@ -1288,6 +1404,13 @@
     "print(\"\\nLabel distribution in the test set:\")\n",
     "print(y_test.value_counts())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1306,7 +1429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
