Add RF grid search

--- a/Project/Assignment1/classification.ipynb
+++ b/Project/Assignment1/classification.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "4            não nos fazem rir à custa dos poderosos  Value  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "4  https://www.publico.pt/2014/10/23/desporto/opi...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1037,7 +1037,7 @@
     "                               scoring='accuracy',\n",
     "                               cv=cross_validation,\n",
     "                               verbose=4,\n",
-    "                               n_jobs=2,\n",
+    "                               n_jobs=6,\n",
     "                               refit=True)\n",
     "\n",
     "    start = time.time()\n",
@@ -1133,6 +1133,74 @@
     "parameter_grid= {'solver': ['saga'], 'penalty': ['elasticnet', 'l1', 'l2'], 'l1_ratio': [0.5], 'class_weight': [None, 'balanced']}\n",
     "\n",
     "lg = grid_search(clf, parameter_grid)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 12 candidates, totalling 60 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=6)]: Using backend LokyBackend with 6 concurrent workers.\n",
+      "[Parallel(n_jobs=6)]: Done  13 tasks      | elapsed: 23.6min\n",
+      "[Parallel(n_jobs=6)]: Done  60 out of  60 | elapsed: 71.6min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fit time: 4461.564643621445s\n",
+      "\n",
+      "Best score: 0.5312080433075443\n",
+      "Best parameters: {'class_weight': None, 'criterion': 'gini', 'max_features': 'log2'}\n",
+      "Best estimator: RandomForestClassifier(max_features='log2', random_state=0)\n",
+      "\n",
+      "Confusion matrix:\n",
+      " [[ 221    1  427   35   49]\n",
+      " [   1   50   69   11    2]\n",
+      " [ 183   20 1248   50  120]\n",
+      " [  39    5  148   84    6]\n",
+      " [  42    1  332    1  204]]\n",
+      "Classification report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "        Fact       0.45      0.30      0.36       733\n",
+      "      Policy       0.65      0.38      0.48       133\n",
+      "       Value       0.56      0.77      0.65      1621\n",
+      "    Value(+)       0.46      0.30      0.36       282\n",
+      "    Value(-)       0.54      0.35      0.42       580\n",
+      "\n",
+      "    accuracy                           0.54      3349\n",
+      "   macro avg       0.53      0.42      0.46      3349\n",
+      "weighted avg       0.53      0.54      0.52      3349\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf = RandomForestClassifier(random_state=0)\n",
+    "\n",
+    "parameter_grid= {'criterion': ['gini','entropy'], 'max_features': ['auto', 'sqrt', 'log2'], 'class_weight': [None, 'balanced']}\n",
+    "\n",
+    "rf = grid_search(clf, parameter_grid)"
    ]
   },
   {
@@ -1322,7 +1390,7 @@
    "source": [
     "## Removing minorities\n",
     "\n",
-    "Next, we will remove the entries of the annotators that will be in a minority, refering to the classification of a label. Our idea was that if a majority of the annotators agrees \n",
+    "Next, we will remove the entries of the annotators that will be in a minority, refering to the classification of a label. Our idea was that if a majority of the annotators agrees with a label, then it must be the correct one and we can discord the ones which contradict it.\n",
     "this will limit the amount of data we will work with, by grouping data by tokens and labels, and count the max number of annotators per token-label pair. "
    ]
   },
