--- a/Project/Assignment1/stemmer.ipynb
+++ b/Project/Assignment1/stemmer.ipynb
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Base code to test the different Stemmers with a TfidfVectorizer and ComplementNB Classifier, later compare each other metrics"
+    "Base code to test the different Stemmers with a TfidfVectorizer and ComplementNB Classifier, later compare their metrics"
    ]
   },
   {
@@ -145,7 +145,7 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.naive_bayes import ComplementNB\n",
-    "import sklearn.metrics as metrics\n",
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
     "import time\n",
     "\n",
     "stopwords_list = stopwords.words('portuguese')\n",
@@ -184,8 +184,8 @@
     "    stop = time.time()\n",
     "\n",
     "    print(\"\\nModel time: %0.2fs\" % (stop - start))\n",
-    "    print(\"\\nConfusion matrix:\\n\", metrics.confusion_matrix(y_test, y_pred))\n",
-    "    print(\"\\nClassification report:\\n\", metrics.classification_report(y_test, y_pred))"
+    "    print(\"\\nConfusion matrix:\\n\", confusion_matrix(y_test, y_pred))\n",
+    "    print(\"\\nClassification report:\\n\", classification_report(y_test, y_pred))"
    ]
   },
   {
@@ -204,12 +204,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preprocess time: 3.78s\n",
+      "Preprocess time: 4.05s\n",
       "['facto não apena fruto ignorância', 'havia humor jornalismo investigação preocupação aprofundar contextualizar história isenção relato preocupação social urgência denunciar muita peça realment jornalística', 'tudo cómico fifa', 'todo permitimo organização faça totalment absurdo sentido', 'não fazem rir custa poderoso']\n",
       "\n",
       "(Number of samples, Number of features): (16743, 15170)\n",
       "\n",
-      "Model time: 0.88s\n",
+      "Model time: 1.22s\n",
       "\n",
       "Confusion matrix:\n",
       " [[306  22 277  44  84]\n",
@@ -254,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preprocess time: 3.94s\n",
+      "Preprocess time: 4.87s\n",
       "['fact nã apen frut ignor', 'hav humor jornal investig preocup aprofund contextualiz histór isençã relat preocup social urgênc denunc muit pec realment jornalíst', 'tud cómic fif', 'tod permit organiz fac total absurd sent', 'nã faz rir cust poder']\n",
       "\n",
       "(Number of samples, Number of features): (16743, 9148)\n",
@@ -304,12 +304,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preprocess time: 6.97s\n",
+      "Preprocess time: 7.28s\n",
       "['fact não apen frut ignor', 'hav hum jorn investig preocup aprofund contextual histór isenç relat preocup soc urg denunci muit peç real jorn', 'tud cómic fif', 'tod permit organiz faç total absurd sent', 'não faz rir cust poder']\n",
       "\n",
       "(Number of samples, Number of features): (16743, 8256)\n",
       "\n",
-      "Model time: 0.41s\n",
+      "Model time: 0.39s\n",
       "\n",
       "Confusion matrix:\n",
       " [[300  28 288  42  75]\n",
