--- a/Project/Assignment1/vectorizer.ipynb
+++ b/Project/Assignment1/vectorizer.ipynb
@@ -63,7 +63,7 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.naive_bayes import ComplementNB\n",
-    "import sklearn.metrics as metrics\n",
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
     "import time\n",
     "\n",
     "y = dataset['label']\n",
@@ -86,8 +86,8 @@
     "    stop = time.time()\n",
     "\n",
     "    print(\"\\nModel time: %0.2fs\" % (stop - start))\n",
-    "    print(\"\\nConfusion matrix:\\n\", metrics.confusion_matrix(y_test, y_pred))\n",
-    "    print(\"\\nClassification report:\\n\", metrics.classification_report(y_test, y_pred))"
+    "    print(\"\\nConfusion matrix:\\n\", confusion_matrix(y_test, y_pred))\n",
+    "    print(\"\\nClassification report:\\n\", classification_report(y_test, y_pred))"
    ]
   },
   {
@@ -120,10 +120,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vectorizer fit time: 0.38s\n",
+      "Vectorizer fit time: 0.42s\n",
       "(Number of samples, Number of features): (16743, 8256)\n",
       "\n",
-      "Model time: 6.37s\n",
+      "Model time: 8.47s\n",
       "\n",
       "Confusion matrix:\n",
       " [[317  30 247  47  92]\n",
@@ -173,7 +173,7 @@
       "Vectorizer fit time: 0.31s\n",
       "(Number of samples, Number of features): (16743, 8256)\n",
       "\n",
-      "Model time: 7.06s\n",
+      "Model time: 6.76s\n",
       "\n",
       "Confusion matrix:\n",
       " [[315  28 253  48  89]\n",
@@ -220,10 +220,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vectorizer fit time: 0.34s\n",
+      "Vectorizer fit time: 0.32s\n",
       "(Number of samples, Number of features): (16743, 8256)\n",
       "\n",
-      "Model time: 0.40s\n",
+      "Model time: 0.38s\n",
       "\n",
       "Confusion matrix:\n",
       " [[300  28 288  42  75]\n",
@@ -270,10 +270,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vectorizer fit time: 0.34s\n",
+      "Vectorizer fit time: 0.31s\n",
       "(Number of samples, Number of features): (16743, 8256)\n",
       "\n",
-      "Model time: 0.71s\n",
+      "Model time: 0.40s\n",
       "\n",
       "Confusion matrix:\n",
       " [[ 307   19  306   38   63]\n",
@@ -318,10 +318,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vectorizer fit time: 0.53s\n",
+      "Vectorizer fit time: 0.52s\n",
       "(Number of samples, Number of features): (16743, 61558)\n",
       "\n",
-      "Model time: 60.16s\n",
+      "Model time: 63.67s\n",
       "\n",
       "Confusion matrix:\n",
       " [[257 177 153  68  78]\n",
@@ -352,17 +352,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vectorizer fit time: 0.51s\n",
+      "Vectorizer fit time: 0.64s\n",
       "(Number of samples, Number of features): (16743, 61558)\n",
       "\n",
-      "Model time: 64.26s\n",
+      "Model time: 69.52s\n",
       "\n",
       "Confusion matrix:\n",
       " [[257 176 153  68  79]\n",
@@ -403,7 +403,7 @@
       "Vectorizer fit time: 0.82s\n",
       "(Number of samples, Number of features): (16743, 61558)\n",
       "\n",
-      "Model time: 4.47s\n",
+      "Model time: 5.28s\n",
       "\n",
       "Confusion matrix:\n",
       " [[263 173 157  63  77]\n",
@@ -448,10 +448,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vectorizer fit time: 0.63s\n",
+      "Vectorizer fit time: 1.21s\n",
       "(Number of samples, Number of features): (16743, 69814)\n",
       "\n",
-      "Model time: 70.00s\n",
+      "Model time: 80.63s\n",
       "\n",
       "Confusion matrix:\n",
       " [[286  58 204  96  89]\n",
@@ -482,17 +482,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vectorizer fit time: 0.62s\n",
+      "Vectorizer fit time: 0.79s\n",
       "(Number of samples, Number of features): (16743, 69814)\n",
       "\n",
-      "Model time: 71.15s\n",
+      "Model time: 80.70s\n",
       "\n",
       "Confusion matrix:\n",
       " [[283  61 201  96  92]\n",
@@ -530,10 +530,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vectorizer fit time: 0.64s\n",
+      "Vectorizer fit time: 0.96s\n",
       "(Number of samples, Number of features): (16743, 69814)\n",
       "\n",
-      "Model time: 4.88s\n",
+      "Model time: 8.49s\n",
       "\n",
       "Confusion matrix:\n",
       " [[ 292   26  287   55   73]\n",
@@ -581,47 +581,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Vectorizer fit time: 0.95s\n",
-      "(Number of samples, Number of features): (16743, 69814)\n",
-      "\n",
-      "Model time: 5.27s\n",
-      "\n",
-      "Confusion matrix:\n",
-      " [[ 292   26  287   55   73]\n",
-      " [   3   63   54   10    3]\n",
-      " [ 272   59 1003  101  186]\n",
-      " [  36   14  101  110   21]\n",
-      " [  64   21  196   14  285]]\n",
-      "\n",
-      "Classification report:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "        Fact       0.44      0.40      0.42       733\n",
-      "      Policy       0.34      0.47      0.40       133\n",
-      "       Value       0.61      0.62      0.61      1621\n",
-      "    Value(+)       0.38      0.39      0.38       282\n",
-      "    Value(-)       0.50      0.49      0.50       580\n",
-      "\n",
-      "    accuracy                           0.52      3349\n",
-      "   macro avg       0.45      0.47      0.46      3349\n",
-      "weighted avg       0.52      0.52      0.52      3349\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "test_vectorizer(TfidfVectorizer(ngram_range=(1,2)))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -632,17 +591,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vectorizer fit time: 0.92s\n",
+      "Vectorizer fit time: 0.93s\n",
       "(Number of samples, Number of features): (16743, 69263)\n",
       "\n",
-      "Model time: 5.33s\n",
+      "Model time: 5.44s\n",
       "\n",
       "Confusion matrix:\n",
       " [[ 287   25  297   50   74]\n",
@@ -689,17 +648,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vectorizer fit time: 1.17s\n",
+      "Vectorizer fit time: 0.80s\n",
       "(Number of samples, Number of features): (16743, 19262)\n",
       "\n",
-      "Model time: 1.22s\n",
+      "Model time: 1.33s\n",
       "\n",
       "Confusion matrix:\n",
       " [[301  16 307  40  69]\n",
@@ -734,6 +693,54 @@
    "source": [
     "Same accuracy, higher f1-scores for the lower support classes, and significantly lower number of features. An important parameter to use in the classification task."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### UniBiTri-grams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vectorizer fit time: 0.72s\n",
+      "(Number of samples, Number of features): (16743, 30172)\n",
+      "\n",
+      "Model time: 1.51s\n",
+      "\n",
+      "Confusion matrix:\n",
+      " [[ 278   22  335   34   64]\n",
+      " [   5   49   66    9    4]\n",
+      " [ 260   73 1028   74  186]\n",
+      " [  38   13  109  105   17]\n",
+      " [  61   13  243    7  256]]\n",
+      "\n",
+      "Classification report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "        Fact       0.43      0.38      0.40       733\n",
+      "      Policy       0.29      0.37      0.32       133\n",
+      "       Value       0.58      0.63      0.60      1621\n",
+      "    Value(+)       0.46      0.37      0.41       282\n",
+      "    Value(-)       0.49      0.44      0.46       580\n",
+      "\n",
+      "    accuracy                           0.51      3349\n",
+      "   macro avg       0.45      0.44      0.44      3349\n",
+      "weighted avg       0.51      0.51      0.51      3349\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_vectorizer(TfidfVectorizer(ngram_range=(1,3), min_df=3, max_df=0.8))"
+   ]
   }
  ],
  "metadata": {
@@ -755,7 +762,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
